; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ctxfi/extr_cthw20k1.c_src_get_rsc_ctrl_blk.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ctxfi/extr_cthw20k1.c_src_get_rsc_ctrl_blk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.src_rsc_ctrl_blk = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @src_get_rsc_ctrl_blk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @src_get_rsc_ctrl_blk(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca %struct.src_rsc_ctrl_blk*, align 8
  store i8** %0, i8*** %3, align 8
  %5 = load i8**, i8*** %3, align 8
  store i8* null, i8** %5, align 8
  %6 = load i32, i32* @GFP_KERNEL, align 4
  %7 = call %struct.src_rsc_ctrl_blk* @kzalloc(i32 4, i32 %6)
  store %struct.src_rsc_ctrl_blk* %7, %struct.src_rsc_ctrl_blk** %4, align 8
  %8 = load %struct.src_rsc_ctrl_blk*, %struct.src_rsc_ctrl_blk** %4, align 8
  %9 = icmp ne %struct.src_rsc_ctrl_blk* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @ENOMEM, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  %14 = load %struct.src_rsc_ctrl_blk*, %struct.src_rsc_ctrl_blk** %4, align 8
  %15 = bitcast %struct.src_rsc_ctrl_blk* %14 to i8*
  %16 = load i8**, i8*** %3, align 8
  store i8* %15, i8** %16, align 8
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local %struct.src_rsc_ctrl_blk* @kzalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
